--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 streamlit>=1.27.0
 pandas>=1.5.3
-scikit-learn>=1.2.2
-imbalanced-learn>=0.10.1
+scikit-learn==1.2.2
+imbalanced-learn==0.10.1
 matplotlib>=3.7.0
 seaborn>=0.12.2
-
-# ydata-profiling==4.6.4  # Comment out if deployment fails
 scipy>=1.10.0
 python-docx>=0.8.11
 reportlab>=3.6.12
+ydata-profiling==4.6.5
